@@ -302,8 +302,8 @@ public class UserController {
 			String autogeneratedPassword = null;
 			if (user.isGenerateAndSend()) {
 				final int AUTOGENERATED_PASSWORD_LENGTH = 10;
-				// Pick from some letters that won't be easily mistaken for each
-				// other. So, for example, omit o O and 0, 1 l and L.
+				// Pick from some letters that won't be easily mistaken for each other.
+				// So, for example, omit o O and 0, 1 l and L.
 				//http://www.java2s.com/Code/Java/Security/GeneratearandomStringsuitableforuseasatemporarypassword.htm
 				//https://commons.apache.org/proper/commons-lang/apidocs/org/apache/commons/lang3/RandomStringUtils.html#random-int-java.lang.String-
 				//http://theopentutorials.com/tutorials/java/util/generating-a-random-password-with-restriction-in-java/
