@@ -11,6 +11,7 @@ Header that appears at the top of all pages, except the login and logs pages
 
 <%@taglib uri="http://www.springframework.org/tags" prefix="spring" %>
 <%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
+<%@taglib uri="https://www.owasp.org/index.php/OWASP_Java_Encoder_Project" prefix="encode" %>
 
 <div id="pageHeader">
 
@@ -323,7 +324,7 @@ Header that appears at the top of all pages, except the login and logs pages
 					</li>
 				</ul>
 				<div class="nav navbar-nav navbar-right navbar-text">
-					<i class="fa fa-user"></i> ${sessionUser.username} 
+					<i class="fa fa-user"></i> ${encode:forHtmlContent(sessionUser.username)} 
 				</div>
 			</div><!--/.nav-collapse -->
 		</div>
