@@ -1,5 +1,6 @@
 ART 3.10
 * Provide edit report link from select parameters page
+* Allow changing job owner
 
 ART 3.9
 * Allow jTDS driver to use imageColumns option
